--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,8 +17,9 @@
         {% endfor %}
         <tr>
             <td>
-                {{ groupTemplate.render(templates=templates, widths=widths[1][0], group=timeGroup, details=False, name=True, link=True, views=views) }}
-                {{ groupTemplate.render(templates=templates, widths=widths[1][0], group=weatherGroup, details=False, name=True, link=True, views=views) }}
+                <a href="/details?group=Time"><h2>Time</h2></a>{{ timeGroup }}
+                <a href="/details?group=Weather"><h2>Weather</h2></a>{{ weatherGroup }}
+                <a href="/details?group=Power"><h2>Power</h2></a>{{ powerGroup }}
                 {{ groupTemplate.render(templates=templates, widths=widths[1][0], group=lightsGroup, details=False, name=True, link=True, views=views) }}
                 {{ groupTemplate.render(templates=templates, widths=widths[1][0], group=poolGroup, details=False, name=True, link=True, views=views) }}
                 {{ poolPumpControlTemplate.render(templates=templates, widths=widths[1][0], poolPumpControl=poolPumpControl, poolPumpFlowSensor=poolPumpFlowSensor, nSetValues=5, views=views) }}
@@ -28,7 +29,6 @@
                 {{ groupTemplate.render(templates=templates, widths=widths[1][1], group=shadesGroup, details=False, name=True, link=True, views=views) }}
                 <a href="/details?group=Hvac"><h2>Hvac</h2></a>{{ hvac }}
                 {{ groupTemplate.render(templates=templates, widths=widths[1][1], group=sprinklersGroup, details=False, name=True, link=True, views=views) }}
-                <a href="/details?group=Power"><h2>Power</h2></a>{{ powerGroup }}
             </td>
         </tr>
     </table>
