--- a/templates/timeWidget.html
+++ b/templates/timeWidget.html
@@ -10,12 +10,12 @@
         <col width={{ (widths[0] - widths[1]) / 5 }}>
         {% endfor %}
         <tr>
-        <td><div class="{{ date.name }}">{{ date.getViewState(views) }}</div></td>
-        <td><div class="{{ time.name }}">{{ time.getViewState(views) }}</div></td>
+        <td><div id="{{ date.name }}" class="date">{{ date.getViewState(views) }}</div></td>
+        <td><div id="{{ time.name }}" class="time">{{ time.getViewState(views) }}</div></td>
         <td><div class=rlabel>Sunrise</div></td>
-        <td><div class="{{ sunrise.name }}">{{ sunrise.getViewState(views) }}</div></td>
+        <td><div id="{{ sunrise.name }}" class="time">{{ sunrise.getViewState(views) }}</div></td>
         <td><div class=rlabel>Sunset</div></td>
-        <td><div class="{{ sunset.name }}">{{ sunset.getViewState(views) }}</div></td>
+        <td><div id="{{ sunset.name }}" class="time">{{ sunset.getViewState(views) }}</div></td>
         </tr>
     </table>
 
