--- a/templates/hvacWidget.html
+++ b/templates/hvacWidget.html
@@ -17,13 +17,13 @@
                 <div id="{{ tempSensor.name }}" class="{{ tempSensor.name }}">{{ tempSensor.getViewState(views) }}</div></td>
             <td><div id="{{ thermostatUnitSensor.name }}" class="{{ thermostatUnitSensor.type+'_'+thermostatUnitSensor.getViewState(views) }}">{{ thermostatUnitSensor.getViewState(views) }}</div></td>
         </tr>
-        <tr>{{ resourceTemplate.render(resource=heatTargetControl, views=views, details=False, stack=stack, indent=indent, label="Heat set") }}</tr>
-        <tr>{{ resourceTemplate.render(resource=coolTargetControl, views=views, details=False, stack=stack, indent=indent, label="Cool set") }}</tr>
+        <tr>{{ resourceTemplate.render(resource=heatTargetControl, views=views, details=False, stack=stack, indent=indent, bullet=bullet, label="Heat set") }}</tr>
+        <tr>{{ resourceTemplate.render(resource=coolTargetControl, views=views, details=False, stack=stack, indent=indent, bullet=bullet, label="Cool set") }}</tr>
         {% if fanControl %}
-        <tr>{{ resourceTemplate.render(resource=fanControl, views=views, details=False, stack=stack, indent=indent, label="Fan") }}</tr>
+        <tr>{{ resourceTemplate.render(resource=fanControl, views=views, details=False, stack=stack, indent=indent, bullet=bullet, label="Fan") }}</tr>
         {% endif %}
         {% if thermostatControl %}
-        <tr>{{ resourceTemplate.render(resource=thermostatControl, views=views, details=False, stack=stack, indent=indent, label="Thermostat") }}</tr>
+        <tr>{{ resourceTemplate.render(resource=thermostatControl, views=views, details=False, stack=stack, indent=indent, bullet=bullet, label="Thermostat") }}</tr>
         {% endif %}
     </table>
 
