--- a/templates/iphone3gs.html
+++ b/templates/iphone3gs.html
@@ -14,15 +14,15 @@
     <table border=0 width={{ widths[0][0] }} style='table-layout:fixed'>
         {% for w in widths[0][1] %}<col width={{ w }}>{% endfor %}
         <tr>
-            <td><div id="{{ time.name }}" class="time">{{ time.getViewState(views) }}</div></td>
-            <td><div id="{{ ampm.name }}" class="ampm">{{ ampm.getViewState(views) }}</div></td>
+            <td><div id="{{ time.name }}" class="time">{{ views.getViewState(time) }}</div></td>
+            <td><div id="{{ ampm.name }}" class="ampm">{{ views.getViewState(ampm) }}</div></td>
         </tr>
     </table>
     <table border=0 width={{ widths[1][0] }} style='table-layout:fixed'>
         {% for w in widths[1][1] %}<col width={{ w }}>{% endfor %}
         <tr>
-            <td><div id="{{ day.name }}" class="date">{{ day.getViewState(views) }}</div></td>
-            <td><div id="{{ temp.name }}" class="{{ temp.name }} tempF">{{ temp.getViewState(views) }}</div></td>
+            <td><div id="{{ day.name }}" class="date">{{ views.getViewState(day) }}</div></td>
+            <td><div id="{{ temp.name }}" class="{{ temp.name }} tempF">{{ views.getViewState(temp) }}</div></td>
         </tr>
     </table>
     <table border=0 width={{ widths[2][0] }} style='table-layout:fixed'>
