--- a/templates/iphone5.html
+++ b/templates/iphone5.html
@@ -17,9 +17,9 @@
         <col width={{ w }}>
         {% endfor %}
         <tr>
-            <td><div id="{{ time.name }}" class="time">{{ time.getViewState(views) }}</div></td>
-            <td><div id="{{ ampm.name }}" class="ampm">{{ ampm.getViewState(views) }}</div></td>
-            <td><div id="{{ temp.name }}" class="tempF {{ temp.name }}">{{ temp.getViewState(views) }}</div></td>
+            <td><div id="{{ time.name }}" class="time">{{ views.getViewState(time) }}</div></td>
+            <td><div id="{{ ampm.name }}" class="ampm">{{ views.getViewState(ampm) }}</div></td>
+            <td><div id="{{ temp.name }}" class="tempF {{ temp.name }}">{{ views.getViewState(temp) }}</div></td>
         </tr>
     </table>
     {{ spaTemplate.render(templates=templates, widths=widths[1], spa=spa, spaTemp=spaTemp, spaTempTarget=spaTempTarget, nSetValues=2, views=views) }}
