--- a/templates/ipad.html
+++ b/templates/ipad.html
@@ -17,14 +17,14 @@
         <tr>
             <td><div class=location>{{ location }}</div>
                 <div>
-                <span id="{{ time.name }}" class="time">{{ time.getViewState(views) }}</span>
-                <span id="{{ ampm.name }}" class="ampm">{{ ampm.getViewState(views) }}</span>
-                <span id="{{ day.name }}" class="date">{{ day.getViewState(views) }}</span>
+                <span id="{{ time.name }}" class="time">{{ views.getViewState(time) }}</span>
+                <span id="{{ ampm.name }}" class="ampm">{{ views.getViewState(ampm) }}</span>
+                <span id="{{ day.name }}" class="date">{{ views.getViewState(day) }}</span>
                 </div>
             </td>
-            <td>Pool<div id="{{ pooltemp.name }}" class="{{ pooltemp.name }}">{{ pooltemp.getViewState(views) }}</div></td>
-            <td>Outside<div id="{{ outtemp.name }}" class="{{ outtemp.name }}">{{ outtemp.getViewState(views) }}</div></td>
-            <td>Humidity<div id="{{ humidity.name }}" class="humidity">{{ humidity.getViewState(views) }}</div></td>
+            <td>Pool<div id="{{ pooltemp.name }}" class="{{ pooltemp.name }}">{{ views.getViewState(pooltemp) }}</div></td>
+            <td>Outside<div id="{{ outtemp.name }}" class="{{ outtemp.name }}">{{ views.getViewState(outtemp) }}</div></td>
+            <td>Humidity<div id="{{ humidity.name }}" class="humidity">{{ views.getViewState(humidity) }}</div></td>
         </tr>
     </table>
     <table border=0 width={{ widths[1][0] }} style='table-layout:fixed'>
