--- a/templates/solar.html
+++ b/templates/solar.html
@@ -14,17 +14,17 @@
             <div class="stats" >
                 <div class="statsGroup">
                     <div>
-                        <span id="{{ date.name }}" class="date">{{ date.getViewState(views) }}</span> 
-                        <span id="{{ time.name }}" class="time">{{ time.getViewState(views) }}</span> 
-                        <span id="{{ ampm.name }}" class="ampm">{{ ampm.getViewState(views) }}</span>
+                        <span id="{{ date.name }}" class="date">{{ views.getViewState(date) }}</span> 
+                        <span id="{{ time.name }}" class="time">{{ views.getViewState(time) }}</span> 
+                        <span id="{{ ampm.name }}" class="ampm">{{ views.getViewState(ampm) }}</span>
                     </div>
                     <div>
                         <span class="label">Sunrise</span> 
-                        <span>{{ sunrise.getViewState(views) }}</span>
+                        <span>{{ views.getViewState(sunrise) }}</span>
                     </div>
                     <div>
                         <span class="label">Sunset</span> 
-                        <span>{{ sunset.getViewState(views) }}</span>
+                        <span>{{ views.getViewState(sunset) }}</span>
                     </div>
                     <div>
                         <span class="label">Lat</span> 
@@ -40,60 +40,60 @@
                 <div class="statsGroup">
                     <div>
                         <span class="label">Air temperature</span> 
-                        <span id="{{ airTemp.name }}" class="{{ airTemp.type }}">{{ airTemp.getViewState(views) }}</span>
+                        <span id="{{ airTemp.name }}" class="{{ airTemp.type }}">{{ views.getViewState(airTemp) }}</span>
                     </div>
                     <div>
                         <span class="label">Inverter temperature</span> 
-                        <span id="{{ inverterTemp.name }}" class="{{ inverterTemp.type }}">{{ inverterTemp.getViewState(views) }}</span>
+                        <span id="{{ inverterTemp.name }}" class="{{ inverterTemp.type }}">{{ views.getViewState(inverterTemp) }}</span>
                     </div>
                     <div>
                         <span class="label">Roof temperature</span> 
-                        <span id="{{ roofTemp.name }}" class="{{ roofTemp.type }}">{{ roofTemp.getViewState(views) }}</span>
+                        <span id="{{ roofTemp.name }}" class="{{ roofTemp.type }}">{{ views.getViewState(roofTemp) }}</span>
                     </div>
                 </div>
                 <div class="statsGroup">
                     <div>
                         <span class="label">{{ currentVoltage.label }}</span> 
-                        <span id="{{ currentVoltage.name }}" class="{{ currentVoltage.type }}">{{ currentVoltage.getViewState(views) }}</span>
+                        <span id="{{ currentVoltage.name }}" class="{{ currentVoltage.type }}">{{ views.getViewState(currentVoltage) }}</span>
                     </div>
                     <div>
                         <span class="label">{{ currentLoad.label }}</span> 
-                        <span id="{{ currentLoad.name }}" class="{{ currentLoad.type }}">{{ currentLoad.getViewState(views) }}</span>
+                        <span id="{{ currentLoad.name }}" class="{{ currentLoad.type }}">{{ views.getViewState(currentLoad) }}</span>
                     </div>
                     <div>
                         <span class="label">{{ currentPower.label }}</span> 
-                        <span id="{{ currentPower.name }}" class="{{ currentPower.type }}">{{ currentPower.getViewState(views) }}</span>
+                        <span id="{{ currentPower.name }}" class="{{ currentPower.type }}">{{ views.getViewState(currentPower) }}</span>
                     </div>
                     <div>
                         <span class="label">{{ todaysEnergy.label }}</span> 
-                        <span id="{{ todaysEnergy.name }}" class="{{ todaysEnergy.type }}">{{ todaysEnergy.getViewState(views) }}</span>
+                        <span id="{{ todaysEnergy.name }}" class="{{ todaysEnergy.type }}">{{ views.getViewState(todaysEnergy) }}</span>
                     </div>
                     <div>
                         <span class="label">{{ lifetimeEnergy.label }}</span> 
-                        <span id="{{ lifetimeEnergy.name }}" class="{{ lifetimeEnergy.type }}">{{ lifetimeEnergy.getViewState(views) }}</span>
+                        <span id="{{ lifetimeEnergy.name }}" class="{{ lifetimeEnergy.type }}">{{ views.getViewState(lifetimeEnergy) }}</span>
                     </div>
                 </div>
             </div>
         {% for inv in inverters %}
             <div class="inverter" style="position:absolute; top:{{ inv.location[0] }}px; left:{{ inv.location[1] }}px" >
                 <div class="inverterName">{{ inv.name }}</div>
-                <div id="{{ inv.name }}" class="KW">{{ inv.getViewState(views) }}</div>
+                <div id="{{ inv.name }}" class="KW">{{ views.getViewState(inv) }}</div>
             </div>
         {% endfor %}
         {% for inv in invertersEnergy %}
             <div class="inverter" style="position:absolute; top:{{ inv.location[0]+28 }}px; left:{{ inv.location[1] }}px" >
-                <div id="{{ inv.name }}" class="KWh">{{ inv.getViewState(views) }}</div>
+                <div id="{{ inv.name }}" class="KWh">{{ views.getViewState(inv) }}</div>
             </div>
         {% endfor %}
         {% for opt in optimizers %}
             <div class="optimizer" style="position:absolute; top:{{ opt.location[0] }}px; left:{{ opt.location[1] }}px" >
                 <div class="optimizerName">{{ opt.name }}</div>
-                <div id="{{ opt.name }}" class="W">{{ opt.getViewState(views) }}</div>
+                <div id="{{ opt.name }}" class="W">{{ views.getViewState(opt) }}</div>
             </div>
         {% endfor %}
         {% for opt in optimizersEnergy %}
             <div class="optimizer" style="position:absolute; top:{{ opt.location[0]+28 }}px; left:{{ opt.location[1] }}px" >
-                <div id="{{ opt.name }}" class="KWh">{{ opt.getViewState(views) }}</div>
+                <div id="{{ opt.name }}" class="KWh">{{ views.getViewState(opt) }}</div>
             </div>
         {% endfor %}
      </div>
