--- a/templates/spaWidget.html
+++ b/templates/spaWidget.html
@@ -10,13 +10,13 @@
         {% endfor %}
         <tr>
         <td><div class=label>{{ spa.label }}</div></td>
-        <td><div id="{{ spaTemp.name }}" class="{{ spaTemp.name }}">{{ spaTemp.getViewState(views) }}</div></td>
-        <td><div id="{{ spa.name }}" class="{{ spa.type+'_'+spa.getViewState(views) }}">{{ spa.getViewState(views) }}</div></td>
+        <td><div id="{{ spaTemp.name }}" class="{{ spaTemp.name }}">{{ views.getViewState(spaTemp) }}</div></td>
+        <td><div id="{{ spa.name }}" class="{{ spa.type+'_'+views.getViewState(spa) }}">{{ views.getViewState(spa) }}</div></td>
         <td>
             <div class=control>
             <form name='control' action='' method='get'>
                 <input type='hidden' name='resource' value='{{ spa.name }}' />
-                {% for value in spa.setValues(views).values()[:nSetValues] %}
+                {% for value in views.getSetValues(spa).values()[:nSetValues] %}
                 <input type='submit' class='button' name='action' value='{{ value }}' />
                 {% endfor %}
             </form>
