--- a/templates/weatherWidget.html
+++ b/templates/weatherWidget.html
@@ -1,6 +1,8 @@
     <!-- temp - the current outside temperature -->
     <!-- humidity - the current humidity -->
     <!-- barometer - the current air pressure -->
+    <!-- windSpeed - the current wind speed -->
+    <!-- windDir - the current wind direction -->
 
 {% set resourceTemplate = templates.get_template("resource.html") %}
     <table border=0 width={{ widths[0] }} style='table-layout:fixed'>
@@ -9,12 +11,17 @@
         <col width={{ (widths[0] - widths[1]) / 5 }}>
         {% endfor %}
         <tr>
-        <td><div class=label>Outside temperature</div></td>
+        <td><div class=label>Temperature</div></td>
         <td><div id="{{ temp.name }}" class="tempF {{ temp.name }}">{{ views.getViewState(temp) }}</div></td>
         <td><div class=rlabel>Humidity</div></td>
         <td><div id="{{ humidity.name }}" class=humidity>{{ views.getViewState(humidity) }}</div></td>
         <td><div class=rlabel>Barometer</div></td>
         <td><div id="{{ barometer.name }}" class=barometer>{{ views.getViewState(barometer) }}</div></td>
+        </tr>
+        <tr>
+        <td><div class=label>Wind</div></td>
+        <td><div id="{{ windSpeed.name }}" class=MPH>{{ views.getViewState(windSpeed) }}</div></td>
+        <td><div id="{{ windDir.name }}" class=Deg>{{ views.getViewState(windDir) }}</div></td>
         </tr>
     </table>
 
