--- a/templates/iphone3gs.html
+++ b/templates/iphone3gs.html
@@ -10,30 +10,34 @@
     {{ script }}
 </head>
 <body>
-    <div class="bedside">
-    <table border=0 width={{ widths[0][0] }} style='table-layout:fixed'>
-        {% for w in widths[0][1] %}<col width={{ w }}>{% endfor %}
-        <tr>
-            <td><div id="{{ time.name }}" class="time">{{ views.getViewState(time) }}</div></td>
-            <td><div id="{{ ampm.name }}" class="ampm">{{ views.getViewState(ampm) }}</div></td>
-        </tr>
-    </table>
-    <table border=0 width={{ widths[1][0] }} style='table-layout:fixed'>
-        {% for w in widths[1][1] %}<col width={{ w }}>{% endfor %}
-        <tr>
-            <td><div id="{{ day.name }}" class="date">{{ views.getViewState(day) }}</div></td>
-            <td><div id="{{ temp.name }}" class="{{ temp.name }} tempF">{{ views.getViewState(temp) }}</div></td>
-        </tr>
-    </table>
-    <table border=0 width={{ widths[2][0] }} style='table-layout:fixed'>
-        {% for w in widths[2][1] %}<col width={{ w }}>{% endfor %}
-        {% for resource in resources %}
-        <tr>
-            {{ resourceTemplate.render(resource=resource, views=views, details=False, stack=True) }}
-        </tr>
-        {% endfor %}
-    </table>
-    {{ hvac }}
+    <div class="dimmed">
+        <table border=0 width={{ widths[0][0] }} style='table-layout:fixed'>
+            {% for w in widths[0][1] %}<col width={{ w }}>{% endfor %}
+            <tr>
+                <td><div id="{{ time.name }}" class="time">{{ views.getViewState(time) }}</div></td>
+                <td><div id="{{ ampm.name }}" class="ampm">{{ views.getViewState(ampm) }}</div></td>
+            </tr>
+        </table>
+        <table border=0 width={{ widths[1][0] }} style='table-layout:fixed'>
+            {% for w in widths[1][1] %}<col width={{ w }}>{% endfor %}
+            <tr>
+                <td><div id="{{ day.name }}" class="date">{{ views.getViewState(day) }}</div></td>
+                <td><div id="{{ temp.name }}" class="{{ temp.name }} tempF">{{ views.getViewState(temp) }}</div></td>
+            </tr>
+        </table>
+    </div>
+
+        <table border=0 width={{ widths[2][0] }} style='table-layout:fixed'>
+            {% for w in widths[2][1] %}<col width={{ w }}>{% endfor %}
+            {% for resource in resources %}
+            <tr>
+                {{ resourceTemplate.render(resource=resource, views=views, details=False, stack=True, dimmed=True) }}
+            </tr>
+            {% endfor %}
+        </table>
+        
+    <div class="dimmed">
+        {{ hvac }}
     </div>
 </body>
 </html>
