Dim iphone3 elements except for blinking open doors

--- a/static/css/iphone3gs.css
+++ b/static/css/iphone3gs.css
@@ -71,15 +71,15 @@ body {
     opacity: 0.5;
     }
 
-.nightlight_On {
+.nightLight_On {
     opacity: 0.5;
     }
 
-.nightlight_Off {
+.nightLight_Off {
     opacity: 0.5;
     }
 
-.nightlight_Sleep {
+.nightLight_Sleep {
     opacity: 0.5;
     }
 
