Add pool pump controls

--- a/templates/ipad.html
+++ b/templates/ipad.html
@@ -1,5 +1,6 @@
 {% set groupTemplate = templates.get_template("group.html") %}
 {% set spaTemplate = templates.get_template("spaWidget.html") %}
+{% set poolPumpTemplate = templates.get_template("poolPumpWidget.html") %}
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en'>
 <head>
     <title>{{ title }}</title>
@@ -39,6 +40,7 @@
             </td>
             <td>
                 <br>{{ spaTemplate.render(templates=templates, widths=widths[1][1][1], spa=spa, spaTemp=spaTemp, spaTempTarget=spaTempTarget, nSetValues=2, views=views) }}
+                <br>{{ poolPumpTemplate.render(templates=templates, widths=widths[1][1][1], poolPumpControl=poolPumpControl, poolPumpFlowSensor=poolPumpFlowSensor, nSetValues=5, views=views) }}
                 <br>{{ groupTemplate.render(templates=templates, widths=widths[1][1][1], group=sprinklersGroup, details=False, name=False, views=views) }}
             </td>
         </tr>
