--- a/templates/solar.html
+++ b/templates/solar.html
@@ -3,7 +3,7 @@
 <head>
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' href='/css/solar.css'> 
+    <link rel='stylesheet' type='text/css' href='/css/solar.css'>
     <script src='/js/jquery.js'></script>
     <script src='/js/update.js'></script>
     {{ script }}
@@ -14,62 +14,62 @@
             <div class="stats" >
                 <div class="statsGroup">
                     <div>
-                        <span id="{{ date.name }}" class="date">{{ views.getViewState(date) }}</span> 
-                        <span id="{{ time.name }}" class="time">{{ views.getViewState(time) }}</span> 
+                        <span id="{{ date.name }}" class="date">{{ views.getViewState(date) }}</span>
+                        <span id="{{ time.name }}" class="time">{{ views.getViewState(time) }}</span>
                         <span id="{{ ampm.name }}" class="ampm">{{ views.getViewState(ampm) }}</span>
                     </div>
                     <div>
-                        <span class="label">Sunrise</span> 
+                        <span class="label">Sunrise</span>
                         <span>{{ views.getViewState(sunrise) }}</span>
                     </div>
                     <div>
-                        <span class="label">Sunset</span> 
+                        <span class="label">Sunset</span>
                         <span>{{ views.getViewState(sunset) }}</span>
                     </div>
                     <div>
-                        <span class="label">Lat</span> 
-                        <span>{{ latitude }}</span> 
-                        <span class="label">Long</span> 
+                        <span class="label">Lat</span>
+                        <span>{{ latitude }}</span>
+                        <span class="label">Long</span>
                         <span>{{ longitude }}</span>
                     </div>
                     <div>
-                        <span class="label">Elevation</span> 
-                        <span>{{ elevation }}</span> 
+                        <span class="label">Elevation</span>
+                        <span>{{ elevation }}</span>
                     </div>
                 </div>
                 <div class="statsGroup">
                     <div>
-                        <span class="label">Air temperature</span> 
+                        <span class="label">Air temperature</span>
                         <span id="{{ airTemp.name }}" class="{{ airTemp.type }}">{{ views.getViewState(airTemp) }}</span>
                     </div>
                     <div>
-                        <span class="label">Inverter temperature</span> 
+                        <span class="label">Inverter temperature</span>
                         <span id="{{ inverterTemp.name }}" class="{{ inverterTemp.type }}">{{ views.getViewState(inverterTemp) }}</span>
                     </div>
                     <div>
-                        <span class="label">Roof temperature</span> 
+                        <span class="label">Roof temperature</span>
                         <span id="{{ roofTemp.name }}" class="{{ roofTemp.type }}">{{ views.getViewState(roofTemp) }}</span>
                     </div>
                 </div>
                 <div class="statsGroup">
                     <div>
-                        <span class="label">{{ currentVoltage.label }}</span> 
+                        <span class="label">{{ currentVoltage.label }}</span>
                         <span id="{{ currentVoltage.name }}" class="{{ currentVoltage.type }}">{{ views.getViewState(currentVoltage) }}</span>
                     </div>
                     <div>
-                        <span class="label">{{ currentLoad.label }}</span> 
+                        <span class="label">{{ currentLoad.label }}</span>
                         <span id="{{ currentLoad.name }}" class="{{ currentLoad.type }}">{{ views.getViewState(currentLoad) }}</span>
                     </div>
                     <div>
-                        <span class="label">{{ currentPower.label }}</span> 
+                        <span class="label">{{ currentPower.label }}</span>
                         <span id="{{ currentPower.name }}" class="{{ currentPower.type }}">{{ views.getViewState(currentPower) }}</span>
                     </div>
                     <div>
-                        <span class="label">{{ todaysEnergy.label }}</span> 
+                        <span class="label">{{ todaysEnergy.label }}</span>
                         <span id="{{ todaysEnergy.name }}" class="{{ todaysEnergy.type }}">{{ views.getViewState(todaysEnergy) }}</span>
                     </div>
                     <div>
-                        <span class="label">{{ lifetimeEnergy.label }}</span> 
+                        <span class="label">{{ lifetimeEnergy.label }}</span>
                         <span id="{{ lifetimeEnergy.name }}" class="{{ lifetimeEnergy.type }}">{{ views.getViewState(lifetimeEnergy) }}</span>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
         {% for inv in inverters %}
             {% if inv.name[-2:] != "-E" %}
             <div class="inverter" style="position:absolute; top:{{ inv.location[0] }}px; left:{{ inv.location[1] }}px" >
-                <div class="inverterName">{{ inv.name }}</div>
+                <div class="inverterName">{{ inv.label }}</div>
                 <div id="{{ inv.name }}" class="KW">{{ views.getViewState(inv) }}</div>
             {% else %}
             <div class="inverter" style="position:absolute; top:{{ inv.location[0]+28 }}px; left:{{ inv.location[1] }}px" >
@@ -88,7 +88,7 @@
         {% for opt in optimizers %}
             {% if opt.name[-2:] != "-E" %}
             <div class="optimizer" style="position:absolute; top:{{ opt.location[0] }}px; left:{{ opt.location[1] }}px" >
-                <div class="optimizerName">{{ opt.name }}</div>
+                <div class="optimizerName">{{ opt.label }}</div>
                 <div id="{{ opt.name }}" class="W">{{ views.getViewState(opt) }}</div>
             {% else %}
             <div class="optimizer" style="position:absolute; top:{{ opt.location[0]+28 }}px; left:{{ opt.location[1] }}px" >
@@ -99,4 +99,3 @@
      </div>
 </body>
 </html>
-
